--- a/src/main/resources/views/MainMaintenance.fxml
+++ b/src/main/resources/views/MainMaintenance.fxml
@@ -3,18 +3,49 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Main_MaintenanceController">
-   <children>
-      <Button fx:id="mirembajtjeButton" layoutX="184.0" layoutY="152.0" mnemonicParsing="false" onAction="#handleMirembajtje" prefHeight="75.0" prefWidth="116.0" text="Mirembajtje" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controllers.Main_MaintenanceController"
+            style="-fx-background-color: linear-gradient(to bottom right, #f5f1ea, #d6c8b8);">
 
-      <Button fx:id="pastrimButton" layoutX="310.0" layoutY="152.0" mnemonicParsing="false" onAction="#handlePastrim" prefHeight="75.0" prefWidth="116.0" text="Pastrim" />
-      <Label fx:id="labelPyetje" layoutX="121.0" layoutY="58.0" prefHeight="52.0" prefWidth="377.0" text="Ne cilen kategori doni te vazhdoni?">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-  <Button fx:id="backToLoginButton" layoutX="256.0" layoutY="266.0" mnemonicParsing="false" onAction="#handleBackToLogin" text="Kthehu ne Log In" />
-   </children>
+    <children>
+        <VBox alignment="CENTER" spacing="30.0"
+              AnchorPane.topAnchor="0.0"
+              AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0">
+
+            <children>
+                <Label fx:id="labelPyetje" text="Në cilën kategori doni të vazhdoni?"
+                       style="-fx-text-fill: #5a4a3c;">
+                    <font>
+                        <Font name="Segoe UI Semibold" size="22.0"/>
+                    </font>
+                </Label>
+
+                <VBox spacing="15.0" alignment="CENTER">
+                    <children>
+                        <Button fx:id="mirembajtjeButton" text="🛠️ Mirëmbajtje"
+                                onAction="#handleMirembajtje"
+                                prefWidth="180.0" prefHeight="45.0"
+                                style="-fx-background-color: #a1866f; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 14; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 1, 1);" />
+
+                        <Button fx:id="pastrimButton" text="🧹 Pastrim"
+                                onAction="#handlePastrim"
+                                prefWidth="180.0" prefHeight="45.0"
+                                style="-fx-background-color: #8c7b68; -fx-text-fill: white; -fx-font-size: 14px; -fx-background-radius: 14; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 1, 1);" />
+
+                        <Button fx:id="backToLoginButton" text="⬅️ Kthehu te Log In"
+                                onAction="#handleBackToLogin"
+                                prefWidth="180.0" prefHeight="40.0"
+                                style="-fx-background-color: #7e6a58; -fx-text-fill: white; -fx-font-size: 13px; -fx-background-radius: 14; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 1, 1);" />
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
