--- a/src/main/resources/views/event.fxml
+++ b/src/main/resources/views/event.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="Controllers.EventController"
+<AnchorPane xmlns:fx="http://javafx.com/fxml"
+            fx:controller="Controllers.EventController"
             prefWidth="900" prefHeight="600"
-            style="-fx-background-color: linear-gradient(to bottom right, #dfe9f3, #ffffff);">
+            style="-fx-background-color: linear-gradient(to bottom right, #f5f1ea, #d6c8b8);">
 
     <children>
         <VBox spacing="20" alignment="TOP_CENTER"
@@ -16,16 +18,19 @@
             <Label text="📅 Event Dashboard" style="
                     -fx-font-size: 32px;
                     -fx-font-weight: bold;
-                    -fx-text-fill: linear-gradient(to right, #2c3e50, #4ca1af);
-                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 8, 0, 2, 2);" />
+                    -fx-text-fill: #5a4a3c;" >
+                <font>
+                    <Font name="Segoe UI Semibold" size="32.0"/>
+                </font>
+            </Label>
 
             <!-- Tabela -->
             <TableView fx:id="eventTable" prefHeight="500" prefWidth="840" style="
-                    -fx-background-color: rgba(255, 255, 255, 0.8);
+                    -fx-background-color: #ffffff;
                     -fx-background-radius: 16;
                     -fx-border-radius: 16;
-                    -fx-border-color: #ffffff99;
-                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.15), 12, 0.2, 0, 6);">
+                    -fx-border-color: #d3c4b4;
+                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 10, 0.2, 0, 4);">
 
                 <columns>
                     <TableColumn fx:id="nameCol" text="📝 Name" prefWidth="140"/>
@@ -36,6 +41,15 @@
                     <TableColumn fx:id="descCol" text="🧾 Description" prefWidth="240"/>
                 </columns>
             </TableView>
+
+            <!-- Butoni për kthim -->
+            <Button fx:id="btnHome" text="← Home" prefWidth="120" prefHeight="35"
+                    style="-fx-background-color: #5a4a3c;;
+                           -fx-text-fill: white;
+                           -fx-font-size: 14px;
+                           -fx-font-weight: bold;
+                           -fx-background-radius: 6;
+                           -fx-cursor: hand;" />
         </VBox>
     </children>
 </AnchorPane>
