--- a/src/main/resources/views/Feedback.fxml
+++ b/src/main/resources/views/Feedback.fxml
@@ -16,7 +16,9 @@
             <Label prefHeight="172.0" prefWidth="342.0" style="-fx-font-size: 36px; -fx-font-weight: bold; -fx-text-fill: #5C3A1A;" text="Read what our customers&#10;say about us" wrapText="true" />
 
             <Label prefHeight="147.0" prefWidth="394.0" style="-fx-text-fill: #555555;" text="At our hotel, we pride ourselves on delivering an exceptional&#10;guest experience through personalized service and comfort.&#10;&#10;Our dedicated team ensures your stay is memorable, offering&#10;luxurious amenities and warm hospitality to exceed your expectations." wrapText="true" />
-         <Button fx:id="backBtn" prefHeight="18.0" prefWidth="100.0" style="-fx-background-color: #6b5746; -fx-text-fill: white; -fx-background-radius: 12;" text="Back" textAlignment="CENTER" />
+
+            <Button fx:id="backBtn" prefHeight="18.0" prefWidth="100.0" style="-fx-background-color: #6b5746; -fx-text-fill: white; -fx-background-radius: 12;" text="Back" textAlignment="CENTER" />
+            <Button fx:id="addBtn" prefHeight="18.0" prefWidth="100.0" style="-fx-background-color: #6b5746; -fx-text-fill: white; -fx-background-radius: 12;" text="Add Review" textAlignment="CENTER" />
         </VBox>
     </left>
 
