--- a/src/main/resources/views/signupi.fxml
+++ b/src/main/resources/views/signupi.fxml
@@ -4,27 +4,34 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignupController">
+<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: linear-gradient(to bottom right, #f5f1ea, #d6c8b8);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignupController">
    <children>
-      <TextField fx:id="signupEmail1" layoutX="288.0" layoutY="112.0" promptText="name@example.com" />
-      <TextField fx:id="signupEmail2" layoutX="288.0" layoutY="147.0" promptText="name@example.com" />
-      <Label layoutX="263.0" layoutY="14.0" text="Signup">
+      <Label layoutX="300.0" layoutY="30.0" text="🔐 Signup">
          <font>
-            <Font size="24.0" />
+            <Font name="Segoe UI Semibold" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="194.0" layoutY="116.0" text="Sheno emailin" />
-      <Label layoutX="185.0" layoutY="151.0" text="Perserit emailin" />
-      <Label layoutX="170.0" layoutY="202.0" text="Sheno passwordin" />
-      <Label layoutX="163.0" layoutY="236.0" text="Perserit passwordin" />
-      <PasswordField fx:id="signupPass1" layoutX="288.0" layoutY="198.0" promptText="min. 8-characters" />
-      <PasswordField fx:id="signupPass2" layoutX="288.0" layoutY="232.0" promptText="min. 8-characters" />
-      <Button layoutX="262.0" layoutY="336.0" mnemonicParsing="false" onAction="#handleSignup" prefHeight="35.0" prefWidth="81.0" text="Signup" />
-      <Label layoutX="181.0" layoutY="84.0" text="Sheno username" />
-      <TextField fx:id="signupUsername" layoutX="288.0" layoutY="80.0" />
-      <Button layoutX="22.0" layoutY="358.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+
+      <Label layoutX="180.0" layoutY="90.0" text="Sheno username" style="-fx-text-fill: #5a4a3c;" />
+      <TextField fx:id="signupUsername" layoutX="290.0" layoutY="85.0" prefWidth="220.0" style="-fx-background-radius: 10;" promptText="username" />
+
+      <Label layoutX="180.0" layoutY="130.0" text="Sheno emailin" style="-fx-text-fill: #5a4a3c;" />
+      <TextField fx:id="signupEmail1" layoutX="290.0" layoutY="125.0" prefWidth="220.0" style="-fx-background-radius: 10;" promptText="name@example.com" />
+
+      <Label layoutX="180.0" layoutY="170.0" text="Perserit emailin" style="-fx-text-fill: #5a4a3c;" />
+      <TextField fx:id="signupEmail2" layoutX="290.0" layoutY="165.0" prefWidth="220.0" style="-fx-background-radius: 10;" promptText="name@example.com" />
+
+      <Label layoutX="180.0" layoutY="210.0" text="Sheno passwordin" style="-fx-text-fill: #5a4a3c;" />
+      <PasswordField fx:id="signupPass1" layoutX="290.0" layoutY="205.0" prefWidth="220.0" style="-fx-background-radius: 10;" promptText="min. 8-characters" />
+
+      <Label layoutX="180.0" layoutY="250.0" text="Perserit passwordin" style="-fx-text-fill: #5a4a3c;" />
+      <PasswordField fx:id="signupPass2" layoutX="290.0" layoutY="245.0" prefWidth="220.0" style="-fx-background-radius: 10;" promptText="min. 8-characters" />
+
+      <Button layoutX="290.0" layoutY="310.0" prefWidth="220.0" prefHeight="40.0" text="✅ Signup" onAction="#handleSignup" style="-fx-background-color: #6b5746; -fx-text-fill: white; -fx-background-radius: 12;" />
+
+      <Button layoutX="20.0" layoutY="550.0" text="⬅️ Back" onAction="#goBack" style="-fx-background-color: #8c7b68; -fx-text-fill: white; -fx-background-radius: 12;" />
    </children>
-</Pane>
+</AnchorPane>
