--- a/src/main/resources/views/ReceptionDashboard.fxml
+++ b/src/main/resources/views/ReceptionDashboard.fxml
@@ -5,26 +5,94 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
 
-<BorderPane prefHeight="358.0" prefWidth="763.0" style="-fx-background-color: linear-gradient(to bottom right, #f7f3eb, #e7dfd6);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceptionDashboardController">
+<BorderPane prefHeight="358.0" prefWidth="763.0"
+            style="-fx-background-color: linear-gradient(to bottom right, #f7f3eb, #e7dfd6);"
+            xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controllers.ReceptionDashboardController">
 
    <!-- HEADER -->
    <top>
-      <HBox alignment="CENTER" prefHeight="151.0" prefWidth="763.0" style="-fx-background-color: transparent; -fx-padding: 36 0 12 0;">
-         <Label style="                 -fx-text-fill: #7b6148;                 -fx-font-size: 32px;                 -fx-font-weight: bold;                 -fx-font-family: 'Segoe UI', sans-serif;" text="Paneli i Recepsionit" />
+      <HBox alignment="CENTER"
+            prefHeight="65.0"
+            prefWidth="763.0"
+            style="-fx-background-color: transparent; -fx-padding: 36 0 12 0;">
+         <Label style="-fx-text-fill: #7b6148;
+                       -fx-font-size: 32px;
+                       -fx-font-weight: bold;
+                       -fx-font-family: 'Segoe UI', sans-serif;"
+                text="Paneli i Recepsionit" />
       </HBox>
    </top>
 
    <!-- QENDRA: Përmbajtja -->
    <center>
-      <VBox alignment="TOP_CENTER" spacing="22" style="-fx-padding: 30 0 0 0;">
-         <Label style="                 -fx-text-fill: #70543a;                 -fx-font-size: 19px;                 -fx-padding: 0 0 14 0;                 -fx-font-family: 'Segoe UI', sans-serif;" text="Zgjidh një nga opsionet" />
-         <Button fx:id="btnPerRole" onAction="#handlePerRole" prefHeight="40.0" prefWidth="298.0" style="                             -fx-background-color: #7b6148;                             -fx-text-fill: #fff;                             -fx-font-size: 16px;                             -fx-font-weight: bold;                             -fx-background-radius: 12;                             -fx-padding: 10 32;                             -fx-cursor: hand;                             -fx-font-family: 'Segoe UI', sans-serif;" text="Numri përdoruesve për çdo rol" />
+      <VBox alignment="TOP_CENTER" spacing="22" style="-fx-padding: 20 0 0 0;">
+         <Label style="-fx-text-fill: #70543a;
+                       -fx-font-size: 19px;
+                       -fx-padding: 0 0 14 0;
+                       -fx-font-family: 'Segoe UI', sans-serif;"
+                text="Zgjidh një nga opsionet" />
+         <Button fx:id="btnPerRole"
+                 onAction="#handlePerRole"
+                 prefHeight="40.0"
+                 prefWidth="298.0"
+                 style="-fx-background-color: #7b6148;
+                        -fx-text-fill: #fff;
+                        -fx-font-size: 16px;
+                        -fx-font-weight: bold;
+                        -fx-background-radius: 12;
+                        -fx-padding: 10 32;
+                        -fx-cursor: hand;
+                        -fx-font-family: 'Segoe UI', sans-serif;"
+                 text="Numri përdoruesve për çdo rol" />
 
          <HBox alignment="CENTER" spacing="22">
-            <Button fx:id="btnCreateReservation" onAction="#handleCreateReservation" style="                             -fx-background-color: #e0b46c;                             -fx-text-fill: #70543a;                             -fx-font-size: 16px;                             -fx-font-weight: bold;                             -fx-background-radius: 12;                             -fx-padding: 10 32;                             -fx-cursor: hand;                             -fx-font-family: 'Segoe UI', sans-serif;" text="Krijo Rezervim" />
-            <Button fx:id="btnAddStaff" onAction="#handleAddStaff" prefHeight="40.0" prefWidth="150.0" style="                             -fx-background-color: #ac8a56;                             -fx-text-fill: #fff;                             -fx-font-size: 16px;                             -fx-font-weight: bold;                             -fx-background-radius: 12;                             -fx-padding: 10 32;                             -fx-cursor: hand;                             -fx-font-family: 'Segoe UI', sans-serif;" text="Shto Staf" />
+            <Button fx:id="btnCreateReservation"
+                    onAction="#handleCreateReservation"
+                    style="-fx-background-color: #e0b46c;
+                           -fx-text-fill: #70543a;
+                           -fx-font-size: 16px;
+                           -fx-font-weight: bold;
+                           -fx-background-radius: 12;
+                           -fx-padding: 10 32;
+                           -fx-cursor: hand;
+                           -fx-font-family: 'Segoe UI', sans-serif;"
+                    text="Krijo Rezervim" />
+            <Button fx:id="btnAddStaff"
+                    onAction="#handleAddStaff"
+                    prefHeight="40.0"
+                    prefWidth="150.0"
+                    style="-fx-background-color: #ac8a56;
+                           -fx-text-fill: #fff;
+                           -fx-font-size: 16px;
+                           -fx-font-weight: bold;
+                           -fx-background-radius: 12;
+                           -fx-padding: 10 32;
+                           -fx-cursor: hand;
+                           -fx-font-family: 'Segoe UI', sans-serif;"
+                    text="Shto Staf" />
          </HBox>
       </VBox>
    </center>
+
+   <!-- FOOTER: LOGOUT POSHTË-DJATHTAS -->
+   <bottom>
+      <HBox alignment="BOTTOM_RIGHT" style="-fx-padding: 0 30 22 0;">
+         <Pane HBox.hgrow="ALWAYS"/>
+         <Button fx:id="btnLogout"
+                 onAction="#handleLogout"
+                 style="-fx-background-color: #e0e0e0;
+                        -fx-text-fill: #4a3c2b;
+                        -fx-font-size: 15px;
+                        -fx-font-weight: bold;
+                        -fx-background-radius: 14;
+                        -fx-padding: 7 30;
+                        -fx-cursor: hand;
+                        -fx-font-family: 'Segoe UI', sans-serif;"
+                 text="Logout" />
+      </HBox>
+   </bottom>
 </BorderPane>
