--- a/src/main/resources/views/event.fxml
+++ b/src/main/resources/views/event.fxml
@@ -15,7 +15,7 @@
               AnchorPane.rightAnchor="30" AnchorPane.bottomAnchor="30">
 
             <!-- Titulli -->
-            <Label text="📅 Event Dashboard" style="
+            <Label text="📅 Evente" style="
                     -fx-font-size: 32px;
                     -fx-font-weight: bold;
                     -fx-text-fill: #5a4a3c;" >
@@ -26,24 +26,28 @@
 
             <!-- Tabela -->
             <TableView fx:id="eventTable" prefHeight="500" prefWidth="840" style="
-                    -fx-background-color: #ffffff;
-                    -fx-background-radius: 16;
-                    -fx-border-radius: 16;
-                    -fx-border-color: #d3c4b4;
-                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 10, 0.2, 0, 4);">
+    -fx-background-color: #ffffff;
+    -fx-background-radius: 16;
+    -fx-border-radius: 16;
+    -fx-border-color: #d3c4b4;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 10, 0.2, 0, 4);">
 
                 <columns>
-                    <TableColumn fx:id="nameCol" text="📝 Name" prefWidth="140"/>
-                    <TableColumn fx:id="organizerCol" text="👤 Organizer" prefWidth="140"/>
-                    <TableColumn fx:id="dateCol" text="📅 Date" prefWidth="100"/>
+                    <TableColumn fx:id="nameCol" text="📝 Name" prefWidth="150"/>
+                    <TableColumn fx:id="organizerCol" text="👤 Organizer" prefWidth="150"/>
+                    <TableColumn fx:id="dateCol" text="📅 Date" prefWidth="120"/>
                     <TableColumn fx:id="timeCol" text="⏰ Time" prefWidth="100"/>
-                    <TableColumn fx:id="roomCol" text="🏨 Room" prefWidth="80"/>
-                    <TableColumn fx:id="descCol" text="🧾 Description" prefWidth="240"/>
+                    <TableColumn fx:id="roomCol" text="🏨 Room" prefWidth="100"/>
+                    <TableColumn fx:id="descCol" text="🧾 Description" prefWidth="220"/>
                 </columns>
+
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
             </TableView>
 
             <!-- Butoni për kthim -->
-            <Button fx:id="btnHome" text="← Home" prefWidth="120" prefHeight="35"
+            <Button fx:id="btnHome" text="← Ballina" prefWidth="120" prefHeight="35"
                     style="-fx-background-color: #5a4a3c;;
                            -fx-text-fill: white;
                            -fx-font-size: 14px;
